DAS-2455: Update regression files for HOSS in production. (#241)
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/test/hoss/HOSS_Regression.ipynb
+++ b/test/hoss/HOSS_Regression.ipynb
@@ -43,13 +43,17 @@
    },
    "outputs": [],
    "source": [
+    "import shutil\n",
     "from datetime import datetime\n",
+    "from os import chdir\n",
     "from os.path import exists\n",
+    "from pathlib import Path\n",
     "\n",
     "from earthdata_hashdiff import nc4_matches_reference_hash_file\n",
     "from harmony import BBox, Client, Collection, Dimension, Environment, Request\n",
+    "from hoss_utilities import test_is_configured\n",
     "\n",
-    "from hoss_utilities import test_is_configured"
+    "test_dir = Path.cwd()"
    ]
   },
   {
@@ -128,10 +132,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e2edcfa-9d1c-498e-9dbd-9ff3566b2675",
+   "id": "5113d1a5-aedd-47f0-8008-6e90451b00ba",
    "metadata": {},
    "source": [
-    "### Plotting helper functions"
+    "### Work in an isolated directory:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4977f52-ee04-45b7-9610-7c6113a5131d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "work_dir = test_dir / 'hoss_workdir'\n",
+    "work_dir.mkdir(exist_ok=True)\n",
+    "chdir(work_dir)\n",
+    "print(f'Working directory changed to: {Path.cwd()}')"
    ]
   },
   {
@@ -173,6 +190,9 @@
     "    'granule_id': 'G2040739631-GHRC_DAAC',\n",
     "}\n",
     "\n",
+    "# Production Temporal collection input data does not match.\n",
+    "# Production Bounds collection is a different version.\n",
+    "\n",
     "hoss_env = {\n",
     "    Environment.LOCAL: hoss_non_prod_information,\n",
     "    Environment.SIT: hoss_non_prod_information,\n",
@@ -184,6 +204,33 @@
     "    hoss_info = hoss_env[harmony_environment]\n",
     "else:\n",
     "    hoss_info = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4252418e-19be-4499-870b-c4dd18317065",
+   "metadata": {},
+   "source": [
+    "### Metadata attributes that can vary between prod and non-prod environments.\n",
+    "These are ignored during hash generation and during testing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b17e5b8e-0255-46d7-ae6e-70265dbb303a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skipped_metadata_attributes = {\n",
+    "    'references',\n",
+    "    'build_dmrpp_metadata.created',\n",
+    "    'build_dmrpp_metadata.build_dmrpp',\n",
+    "    'build_dmrpp_metadata.bes',\n",
+    "    'build_dmrpp_metadata.libdap',\n",
+    "    'build_dmrpp_metadata.invocation',\n",
+    "    'build_dmrpp_metadata.configuration',\n",
+    "}"
    ]
   },
   {
@@ -221,6 +268,7 @@
     "        granule_id=[hoss_info['granule_id']],\n",
     "        variables=['atmosphere_cloud_liquid_water_content'],\n",
     "        spatial=hoss_var_bbox_bbox,\n",
+    "        labels=['hoss-rtests', 'hoss-rtest-1'],\n",
     "    )\n",
     "\n",
     "    submit_and_download(harmony_client, hoss_var_bbox_request, hoss_var_bbox_file_name)\n",
@@ -230,7 +278,8 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_var_bbox_file_name,\n",
-    "        'reference_files/hoss_var_bbox_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_var_bbox_reference.json',\n",
+    "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, bounding box request.'\n",
     "\n",
     "    print_success('HOSS variable and bounding box request.')\n",
@@ -275,6 +324,7 @@
     "        granule_id=[hoss_info['granule_id']],\n",
     "        variables=['atmosphere_cloud_liquid_water_content'],\n",
     "        spatial=grid_edge_bbox,\n",
+    "        labels=['hoss-rtests', 'hoss-rtest-2'],\n",
     "    )\n",
     "\n",
     "    submit_and_download(harmony_client, grid_edge_request, grid_edge_file_name)\n",
@@ -284,7 +334,8 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        grid_edge_file_name,\n",
-    "        'reference_files/hoss_grid_edge_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_grid_edge_reference.json',\n",
+    "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, crossing longitudinal edge.'\n",
     "\n",
     "    print_success('HOSS request crossing longitudinal edge.')\n",
@@ -315,6 +366,7 @@
     "        collection=hoss_info['collection'],\n",
     "        granule_id=[hoss_info['granule_id']],\n",
     "        variables=['sst_dtime', 'wind_speed'],\n",
+    "        labels=['hoss-rtests', 'hoss-rtest-3'],\n",
     "    )\n",
     "\n",
     "    submit_and_download(harmony_client, no_bbox_request, no_bbox_file_name)\n",
@@ -322,7 +374,8 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        no_bbox_file_name,\n",
-    "        'reference_files/hoss_no_bbox_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_no_bbox_reference.json',\n",
+    "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, no bounding box.'\n",
     "\n",
     "    print_success('HOSS request without bounding box.')\n",
@@ -354,6 +407,7 @@
     "        collection=hoss_info['collection'],\n",
     "        granule_id=[hoss_info['granule_id']],\n",
     "        spatial=hoss_all_vars_bbox,\n",
+    "        labels=['hoss-rtests', 'hoss-rtest-4'],\n",
     "    )\n",
     "\n",
     "    submit_and_download(harmony_client, hoss_all_vars_request, hoss_all_vars_file_name)\n",
@@ -361,7 +415,8 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_all_vars_file_name,\n",
-    "        'reference_files/hoss_all_vars_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_all_vars_reference.json',\n",
+    "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS all-variable request.'\n",
     "\n",
     "    print_success('HOSS all-variable request.')\n",
@@ -420,6 +475,7 @@
     "            'start': datetime(2021, 6, 9, 12, 0, 0),\n",
     "            'stop': datetime(2021, 6, 9, 16, 0, 0),\n",
     "        },\n",
+    "        labels=['hoss-rtests', 'hoss-rtest-5'],\n",
     "    )\n",
     "\n",
     "    submit_and_download(harmony_client, hoss_temporal_request, hoss_temporal_file_name)\n",
@@ -427,7 +483,8 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_temporal_file_name,\n",
-    "        'reference_files/hoss_temporal_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_temporal_reference.json',\n",
+    "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS temporal request.'\n",
     "\n",
     "    print_success('HOSS temporal request.')\n",
@@ -461,6 +518,7 @@
     "        granule_id=[hoss_info['granule_id']],\n",
     "        variables=['atmosphere_cloud_liquid_water_content'],\n",
     "        dimensions=[Dimension('latitude', -20, -5), Dimension('longitude', 70, 85)],\n",
+    "        labels=['hoss-rtests', 'hoss-rtest-6'],\n",
     "    )\n",
     "\n",
     "    submit_and_download(\n",
@@ -472,7 +530,8 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_named_dims_file_name,\n",
-    "        'reference_files/hoss_named_dimensions_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_named_dimensions_reference.json',\n",
+    "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS named dimensions request.'\n",
     "\n",
     "    print_success('HOSS named dimensions request.')\n",
@@ -499,7 +558,7 @@
    "source": [
     "hoss_shape_non_prod_information = {\n",
     "    'collection': Collection(id='C1245618475-EEDTEST'),\n",
-    "    'shape_file_path': 'amazon_basin.geo.json',\n",
+    "    'shape_file_path': str(test_dir / 'amazon_basin.geo.json'),\n",
     "    'granule_id': 'G1245649517-EEDTEST',\n",
     "}\n",
     "\n",
@@ -529,6 +588,7 @@
     "        granule_id=hoss_shape_info['granule_id'],\n",
     "        shape=hoss_shape_info['shape_file_path'],\n",
     "        variables=['Grid/precipitationCal'],\n",
+    "        labels=['hoss-rtests', 'hoss-rtest-7'],\n",
     "    )\n",
     "    submit_and_download(harmony_client, hoss_shape_request, hoss_shape_file_name)\n",
     "    assert exists(\n",
@@ -537,7 +597,8 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_shape_file_name,\n",
-    "        'reference_files/hoss_shape_file_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_shape_file_reference.json',\n",
+    "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS-Geographic polygon spatial subset request.'\n",
     "\n",
     "    print_success('HOSS-Geographic polygon spatial subset request.')\n",
@@ -576,6 +637,7 @@
     "            'start': datetime(2020, 1, 18, 18, 45, 0),\n",
     "            'stop': datetime(2020, 1, 18, 19, 45, 0),\n",
     "        },\n",
+    "        labels=['hoss-rtests', 'hoss-rtest-8'],\n",
     "    )\n",
     "\n",
     "    submit_and_download(harmony_client, hoss_bounds_request, hoss_bounds_file_name)\n",
@@ -583,7 +645,8 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_bounds_file_name,\n",
-    "        'reference_files/hoss_bounds_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_bounds_reference.json',\n",
+    "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS bounds request.'\n",
     "\n",
     "    print_success('HOSS bounds request.')\n",
@@ -623,7 +686,7 @@
     "hoss_projected_non_prod_information = {\n",
     "    'collection': Collection(id='C1245804308-EEDTEST'),\n",
     "    'bbox': BBox(w=-160, s=68, e=-150, n=70),\n",
-    "    'shape_file_path': 'north_slope.geo.json',\n",
+    "    'shape_file_path': str(test_dir / 'north_slope.geo.json'),\n",
     "    'granule_id': 'G1245804356-EEDTEST',\n",
     "    'temporal_range': {\n",
     "        'start': datetime(2008, 7, 2, 0, 0, 0),\n",
@@ -658,6 +721,7 @@
     "        spatial=hoss_projected_info['bbox'],\n",
     "        variables=['NEE', 'lat', 'lon'],\n",
     "        temporal=hoss_projected_info['temporal_range'],\n",
+    "        labels=['hoss-rtests', 'hoss-rtest-9'],\n",
     "    )\n",
     "    submit_and_download(\n",
     "        harmony_client, hoss_projected_request, hoss_projected_file_name\n",
@@ -668,7 +732,8 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_projected_file_name,\n",
-    "        'reference_files/hoss_projected_north_slope_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_projected_north_slope_reference.json',\n",
+    "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS-Projection-gridded bounding box request.'\n",
     "\n",
     "    print_success('HOSS-projection-gridded with bounding box.')\n",
@@ -700,13 +765,16 @@
    "outputs": [],
    "source": [
     "if test_is_configured(hoss_projected_info, 'collection'):\n",
-    "    hoss_projected_shape_file_name = 'hoss_projected_north_slope_shape.nc4'\n",
+    "    hoss_projected_shape_file_name = str(\n",
+    "        test_dir / 'hoss_projected_north_slope_shape.nc4'\n",
+    "    )\n",
     "    hoss_projected_request = Request(\n",
     "        collection=hoss_projected_info['collection'],\n",
     "        granule_id=hoss_projected_info['granule_id'],\n",
     "        shape=hoss_projected_info['shape_file_path'],\n",
     "        variables=['NEE', 'lat', 'lon'],\n",
     "        temporal=hoss_projected_info['temporal_range'],\n",
+    "        labels=['hoss-rtests', 'hoss-rtest-10'],\n",
     "    )\n",
     "    submit_and_download(\n",
     "        harmony_client, hoss_projected_request, hoss_projected_shape_file_name\n",
@@ -717,7 +785,8 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_projected_shape_file_name,\n",
-    "        'reference_files/hoss_projected_north_slope_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_projected_north_slope_reference.json',\n",
+    "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS-Projection-gridded shape file request.'\n",
     "\n",
     "    print_success('Subsetting projected grid with shapefile.')\n",
@@ -792,6 +861,7 @@
     "            'Freeze_Thaw_Retrieval_Data_Polar/transition_state_flag',\n",
     "        ],\n",
     "        spatial=hoss_bbox_spatial_bbox,\n",
+    "        labels=['hoss-rtests', 'hoss-rtest-11'],\n",
     "    )\n",
     "\n",
     "    submit_and_download(\n",
@@ -803,7 +873,9 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_bbox_spatial_file_name,\n",
-    "        'reference_files/hoss_bbox_3d_no_dimensions_zyx_order_reference.json',\n",
+    "        test_dir\n",
+    "        / 'reference_files/hoss_bbox_3d_no_dimensions_zyx_order_reference.json',\n",
+    "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS bounding box spatial, 3-D (well ordered) request.'\n",
     "\n",
     "    print_success('HOSS bounding box 3d no dimensions nominal order request.')\n",
@@ -839,7 +911,7 @@
     "hoss_shape_file_polygon_spatial_3d_non_prod_information = {\n",
     "    'collection': Collection(id='C1268452378-EEDTEST'),\n",
     "    'granule_id': 'G1268452388-EEDTEST',\n",
-    "    'shape_file_path': 'usa-mainland.geojson',\n",
+    "    'shape_file_path': str(test_dir / 'usa-mainland.geojson'),\n",
     "}\n",
     "\n",
     "hoss_shape_file_polygon_spatial_3d_prod_information = {\n",
@@ -880,6 +952,7 @@
     "            'Soil_Moisture_Retrieval_Data_AM/landcover_class',\n",
     "            'Soil_Moisture_Retrieval_Data_PM/landcover_class_pm',\n",
     "        ],\n",
+    "        labels=['hoss-rtests', 'hoss-rtest-12'],\n",
     "    )\n",
     "\n",
     "    submit_and_download(\n",
@@ -894,7 +967,9 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_shape_file_polygon_spatial_3d_file_name,\n",
-    "        'reference_files/hoss_shape_file_3d_no_dimensions_yxz_order_reference.json',\n",
+    "        test_dir\n",
+    "        / 'reference_files/hoss_shape_file_3d_no_dimensions_yxz_order_reference.json',\n",
+    "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS bounding box spatial, 3-D (poorly ordered) request.'\n",
     "\n",
     "    print_success('HOSS polygon spatial subset for 3D variables request.')\n",
@@ -929,7 +1004,7 @@
     "hoss_shape_file_polygon_spatial_non_prod_information = {\n",
     "    'collection': Collection(id='C1268399578-EEDTEST'),\n",
     "    'granule_id': 'G1268399648-EEDTEST',\n",
-    "    'shape_file_path': 'usa-mainland.geojson',\n",
+    "    'shape_file_path': str(test_dir / 'usa-mainland.geojson'),\n",
     "}\n",
     "\n",
     "hoss_shape_file_polygon_spatial_prod_information = {\n",
@@ -970,6 +1045,7 @@
     "            'Soil_Moisture_Retrieval_Data_Polar_AM/surface_flag',\n",
     "            'Soil_Moisture_Retrieval_Data_Polar_PM/surface_flag_pm',\n",
     "        ],\n",
+    "        labels=['hoss-rtests', 'hoss-rtest-13'],\n",
     "    )\n",
     "\n",
     "    submit_and_download(\n",
@@ -984,12 +1060,43 @@
     "\n",
     "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_shape_file_polygon_spatial_file_name,\n",
-    "        'reference_files/hoss_shape_file_2d_no_dimensions_reference.json',\n",
+    "        test_dir / 'reference_files/hoss_shape_file_2d_no_dimensions_reference.json',\n",
+    "        skipped_metadata_attributes=skipped_metadata_attributes,\n",
     "    ), 'Test output does not match reference file, HOSS polygon spatial subset no dimensions request.'\n",
     "\n",
     "    print_success('HOSS polygon 2d no dimensions spatial subset request.')\n",
     "else:\n",
     "    print(f'Skipping - HOSS is not configured for this test in {harmony_environment}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9fcff2f-f575-4565-a071-117022540d12",
+   "metadata": {},
+   "source": [
+    "### Clean up working directory's downloaded files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "442bf5c9-d691-4a32-9e08-50a1c565403c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chdir(test_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5206cd6-b687-4034-839b-161a10f862d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if work_dir.exists():\n",
+    "    shutil.rmtree(work_dir)\n",
+    "    print(f'Removed download directory and all files: {work_dir}')"
    ]
   }
  ],
